[package]
name = "ethereum_gravity"
version = "0.1.0"
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mhub2_utils = {path = "../mhub2_utils" }
web30 = {path = "../web30" }

deep_space ={git="https://github.com/iqlusioninc/deep_space/", branch="zaki/tendermint_0_21"}
clarity = "0.4.11"
log = "0.4"
sha3 = "0.9"
reqwest = { version = "0.11", features = ["blocking", "json"] }
